--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         .tile {
-            background: white;
+            background: khaki;
             padding: 12px;
             border-radius: 14px;
             min-height: 60px;
@@ -151,3 +151,4 @@
 
 </body>
 </html>
+
